fix(featured tags): correctly align figcaption

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -41,10 +41,15 @@
 }
 
 @layer components {
-
 }
 
 @layer utilities {
+
+  /* Like .truncate but with overflow-clip */
+  .truncate-clip {
+    @apply overflow-clip whitespace-nowrap text-ellipsis;
+  }
+
 
   /* Fix for elements jumping around because flex default min-width is auto */
   /*.flex > * {*/
